--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,6 +3,8 @@ FROM resin/%%RESIN_MACHINE_NAME%%-python
 #switch on systemd init system in container
 ENV INITSYSTEM on
 
+RUN apt-get update && apt-get install libraspberrypi-bin python-picamera
+
 # pip install python deps from requirements.txt
 # For caching until requirements.txt changes
 COPY ./requirements.txt /requirements.txt
@@ -12,4 +14,3 @@ COPY . /usr/src/app
 WORKDIR /usr/src/app
 
 CMD ["bash","start.sh"]
-
